Day 2: Writing Structure Extraction

--- a/writing100.tex
+++ b/writing100.tex
@@ -12,7 +12,10 @@
 \begin{document}
 \maketitle
 
-\section{Crowdsourced Writing}
+\section{Day 2: Writing Structure Extraction}
+The quality of paper structure affects reading comprehension. To help a writer improve she/his writing, we need to assess the structure of a paper. However, evaluating the structure of a document is challenging for a novice reader. It allows a reader to understand, analyze, and judge ideas delivered in a paper. To aid structure assessment, we provide an approach which identifies the main ideas and extracts a causal relation between two ideas.
+
+\section{Day 1: Crowdsourced Writing}
 Recent studies have decomposed writing process into a series of micro-tasks in crowdsourcing domain. Soylent \cite{Bernstein:UIST10} splits writing projects into multiple stages and allows crowd workers to shorten, proofread, and edit a document. MicroWriter [cited] enable collaborative writing by breaking the task of writing into three types of micro-tasks--generating ideas, labeling ideas to organize them, and writing paragraphs given a few related ideas.
 
 \bibliographystyle{abbrv} 
