Day 3: Writing Process

--- a/writing100.tex
+++ b/writing100.tex
@@ -11,6 +11,8 @@
 
 \begin{document}
 \maketitle
+\section{Day 3: Writing Process}
+Writing is a complex process which can be broken into a series of steps. The steps are pre-writing, drafting, revising, editing, and publishing. Pre-writing is the planning phase of the writing process including brainstorming, collecting ideas, and creating an outline to organize ideas. Drafting is to convert ideas into paragraphs. Revising is the phase of modifying ideas and reorganizing structure by adding, deleting, or rearranging content. The goal of this stage focuses on fixing global issues in writing. Editing is the error-correction phase of the process. At this point, writers proofread and correct surface errors such as grammar, typos, and other mechanics. Instead of fixing global issues, this phase focuses on local issues. After finishing previous steps, writers can publish their work at the end of the process.
 
 \section{Day 2: Writing Structure Extraction}
 The quality of paper structure affects reading comprehension. To help a writer improve she/his writing, we need to assess the structure of a paper. However, evaluating the structure of a document is challenging for a novice reader. It allows a reader to understand, analyze, and judge ideas delivered in a paper. To aid structure assessment, we provide an approach which identifies the main ideas and extracts a causal relation between two ideas.
