Day 4: Crowdsourced Summary

--- a/writing100.tex
+++ b/writing100.tex
@@ -11,6 +11,9 @@
 
 \begin{document}
 \maketitle
+\section{Day 4: Crowdsourced Summary}
+A well-written summary helps readers understand the main ideas in a document with less time and effort. However, generating a high-quality summary is difficult for human and machine. Humans need to spend some time to read through the content, digest all of the information in a document, and generate a summary by synthesizing selected ideas. On the other hand, machines can identify key sentences by a statistical algorithm, but still cannot produce a coherent summary without human intervention. In this project, we attempt to combine the power of humans and machines to produce a high-quality summary from an academic paper. Machines can identify key sentences, and human can generate a summary by properly organizing those key sentences.
+
 \section{Day 3: Writing Process}
 Writing is a complex process which can be broken into a series of steps. The steps are pre-writing, drafting, revising, editing, and publishing. Pre-writing is the planning phase of the writing process including brainstorming, collecting ideas, and creating an outline to organize ideas. Drafting is to convert ideas into paragraphs. Revising is the phase of modifying ideas and reorganizing structure by adding, deleting, or rearranging content. The goal of this stage focuses on fixing global issues in writing. Editing is the error-correction phase of the process. At this point, writers proofread and correct surface errors such as grammar, typos, and other mechanics. Instead of fixing global issues, this phase focuses on local issues. After finishing previous steps, writers can publish their work at the end of the process.
 
