--- a/writing100.tex
+++ b/writing100.tex
@@ -11,6 +11,9 @@
 
 \begin{document}
 \maketitle
+\section{Day 5: Extracting Feedback with Global Concerns}
+External Feedback helps a writer improve his/her writing. Obtaining feedback from experts is useful but limited due to the availability of experts. Prior studies have explored a scalable way by leveraging online crowd workers to provide diverse comments. However, novice workers tend to make suggestions for surface errors rather than global issues such as coherence or organization. To improve the organization of a document, we require more diverse feedbacks with global concerns. In this work, we design some reading comprehension questions to guide novice readers to understand the transition between ideas and provide comments for improving the development.
+
 \section{Day 4: Crowdsourced Summary}
 A well-written summary helps readers understand the main ideas in a document with less time and effort. However, generating a high-quality summary is difficult for human and machine. Humans need to spend some time to read through the content, digest all of the information in a document, and generate a summary by synthesizing selected ideas. On the other hand, machines can identify key sentences by a statistical algorithm, but still cannot produce a coherent summary without human intervention. In this project, we attempt to combine the power of humans and machines to produce a high-quality summary from an academic paper. Machines can identify key sentences, and human can generate a summary by properly organizing those key sentences.
 
