Day 6: Learnersourcing for writing

--- a/writing100.tex
+++ b/writing100.tex
@@ -11,6 +11,9 @@
 
 \begin{document}
 \maketitle
+\section{Day 6: Learnersourcing for writing}
+In an education setting, learners are intrinsically motivated to contribute their efforts as they can learn the skill in the process. In this work, we build a learnersourcing platform which allows learners to annotate sentence structure of a document and learn the writing skill from those writing examples. They also can submit their writing to the platform for obtaining feedback from other learners. 
+
 \section{Day 5: Extracting Feedback with Global Concerns}
 External Feedback helps a writer improve his/her writing. Obtaining feedback from experts is useful but limited due to the availability of experts. Prior studies have explored a scalable way by leveraging online crowd workers to provide diverse comments. However, novice workers tend to make suggestions for surface errors rather than global issues such as coherence or organization. To improve the organization of a document, we require more diverse feedbacks with global concerns. In this work, we design some reading comprehension questions to guide novice readers to understand the transition between ideas and provide comments for improving the development.
 
