Day 7: Facilitating Research writing

--- a/writing100.tex
+++ b/writing100.tex
@@ -11,6 +11,11 @@
 
 \begin{document}
 \maketitle
+\section{Day 7: Facilitating Research writing}
+Writing is an important academic activity for researchers. However, it imposes significant challenges for writers, especially for novice student writers. The challenge is that they not only present their ideas in disciplinary discourses but also write it in a language whose rhetorical convention is quite different from their own language. (need revise)
+
+Writing a scientific research article is very different from the regular communicating writing (ref). The aim of research articles is presenting a particular information in a structured way, and readers can understand this article more effectively. Therefore, research articles are structured according to a certain rhetorical pattern (ref). Experienced writers already have a rhetorical pattern in mind and use them in their writing; however, novice writers lack that knowledge. To cope with this challenge, we design a writing tool that helps novice writers to produce a better research article by incorporating a rhetorical moves structure. By making the knowledge of writing explicit to novice writer through crowds genre analysis and a structure interface, writers can learn on the spot and produce a better result. 
+
 \section{Day 6: Learnersourcing for writing}
 In an education setting, learners are intrinsically motivated to contribute their efforts as they can learn the skill in the process. In this work, we build a learnersourcing platform which allows learners to annotate sentence structure of a document and learn the writing skill from those writing examples. They also can submit their writing to the platform for obtaining feedback from other learners. 
 
