update the content of Day 8

--- a/writing100.tex
+++ b/writing100.tex
@@ -12,7 +12,7 @@
 \begin{document}
 \maketitle
 \section{Day 8: Rhetorical Move Structure}
-The rhetorical move analysis developed by Swales (1981, 1990, 2004) is used to analyze the structure of introductions to research articles. This approach aims to determine the communicative purposes of a text by categorizing diverse text units according to the particular communicative purpose. It originates from the education purpose of supporting the teaching of academic writing and reading for non-native English learners.
+The rhetorical move analysis developed by Swales (1981, 1990, 2004) is used to analyze the structure of introductions to research articles. This approach originates from the education purpose of supporting the teaching of academic writing and reading for non-native English learners. It aims to determine the communicative purposes of a text by categorizing diverse text units according to the particular communicative purpose or rhetorical moves. A move refers to a section of a text that performs a specific communicative function. Each move not only has its own purpose but also contributes to the overall communicative purpose of the genre.
 
 \section{Day 7: Facilitating Research writing}
 Writing is an important academic activity for researchers. However, it imposes significant challenges for writers, especially for novice student writers. The challenge is that they not only present their ideas in disciplinary discourses but also write it in a language whose rhetorical convention is quite different from their own language. (need revise)
